--- a/assets/css/global/800_application.css
+++ b/assets/css/global/800_application.css
@@ -17,31 +17,6 @@
 
 
 
-
-
-
-.ui-state-loading
-{
-	display: block;
-	margin: 0px;
-/*
-	height: 100px;
-	width: 100px;
-	background-image: url(/assets/images/loading-bars-319CB7-on-transparent_100x100.gif);
-*/
-	height: 48px;
-	width: 48px;
-	background-image: url(/assets/images/666666-ajax-loader-bars.gif);
-	background-repeat: no-repeat;
-	z-index: 101;
-	opacity: .7; 
-	filter:Alpha(Opacity=70);
-}
-		.ui-state-loading strong
-		{
-			display: none !important;
-		}
-
 #debugContent .ui-state-debug .ui-widget-header
 {
 	background: none !important;
@@ -94,4 +69,163 @@
 #makeKeywordUrlMatch
 {
 	margin: 1%;
+}
+
+
+a.ui-page-action.ui-state-default
+{
+	color: #515151 !important;
+	border: none !important;
+	background: none !important;
+}
+
+a.ui-page-action.ui-state-active, a.ui-page-action.ui-state-default.ui-state-hover, a.ui-page-action.ui-state-active.ui-state-hover
+{
+	color: #990000 !important;
+	border: none !important;
+	background: none !important;
+}
+		a.ui-page-action.ui-state-default.ui-state-hover
+		{
+			text-decoration: underline;
+		}
+
+
+
+
+
+div.border-i
+{
+	padding-right: 3px !important;
+	margin-right: 4px !important;
+	border-right: 1px solid #515151 !important;
+}
+
+div.colborder-i
+{
+	padding-right: 13px !important;
+	margin-right: 14px !important;
+	border-right: 1px solid #515151 !important;
+}
+
+div.design-outline
+{
+	outline: 1px solid red;
+}
+
+
+
+.content .content-namespace
+{
+
+}
+		.content .content-promo-people, .content .content-intro
+		{
+			font-family: "Georgia", serif;
+		}
+		
+				.content .content-promo.ui-widget-content, .content .content-intro.ui-widget-content
+				{
+					padding-right: 19px;
+					padding-left: 19px;
+				}
+				
+						.content .content-intro .content-callaway
+						{
+							text-align: right;
+							text-transform: lowercase;
+						}
+				
+				
+				.content .content-promo-car
+				{
+				}
+						.content .content-promo-car a:link
+						{
+							color: #9C0000;
+							text-decoration: none;
+						}
+						.content .content-promo-car h5 span.price
+						{
+							color: #333;
+							padding-left: 3em;
+						}
+						
+						.content .content-promo-car p, .content .content-promo-car dl.horizontal
+						{
+							font-size: .92em;
+							margin: .25em 0 !important;
+						}
+								
+								.content .content-promo-car p
+								{
+								}
+								
+								
+								.content .content-promo-car dl.horizontal
+								{
+									display: block;
+								}
+										.content .content-promo-car dl.horizontal dt
+										{
+											float: left;
+											clear: none;
+											padding-right: .42em;
+											margin: 0;
+										}
+										.content .content-promo-car dl.horizontal dd
+										{
+											float: left;
+											clear: none;
+											padding-right: 1.1em;
+											margin: 0;
+										}
+		
+
+
+
+
+.content .design-namespace
+{
+	
+}
+		.content .design-text-align-right
+		{
+			text-align: right;
+		}
+		
+		.content .design-text-align-left
+		{
+			text-align: left;
+		}
+
+		.content div.column.design-box
+		{
+			padding:1.5em;
+			margin-bottom:1.5em;
+			background: none;
+		}
+				
+		.content .design-pad-1
+		{
+			padding-right:9px;
+			padding-left:10px;
+		}
+		
+			.content img.design-placeholder
+			{
+				outline: 1px solid #515151; background: #666;
+			}
+			
+			.content img.design-box
+			{
+				padding: 0;
+				margin: 1.5em;
+			}
+
+
+.ui-state-loading
+{
+	width: 250px;
+	margin: 0px;
 }
